<resources>
    <string name="app_name">Jabt Informatic\'s</string>
    /*Pagina principal*/
    <string name="hola_principal">Hola!</string>
    <string name="description_principal">Soluciones integrales de tecnologías de información a medida.</string>
    <string name="btn_text_principal_ingresar">INGRESAR</string>
    <string name="btn_text_principal_registrar">REGISTRARSE</string>
    /*Pagina View_Ingresar*/
    <string name="bienvenido">Bienvenido!</string>
    <string name="description_viewIngresar">Iniciar Sesión para continuar</string>
    <string name="ingresarUsuario">Ingresar Usuariooop</string>
    <string name="ingresarContraseña">Ingresar Contraseña</string>
    <string name="btn_text_view_Ingresar">INGRESAR</string>
    <string name="olvidastecontrasena">¿Olvidaste tu contraseña?</string>
    <string name="or">or</string>
    <string name="noestasregistrado">¿No estas registrado?</string>
    <string name="logearse">Registrarse</string>
    /*Pagina View_Registrar*/
    <string name="hola">Hola!</string>
    <string name="description_view_registrar">Crea una cuenta nueva.</string>
    <string name="ingresarUsuario_view_registrar">Ingresar Usuario</string>
    <string name="ingresarCorreo_view_registrar">Ingresar Correo</string>
    <string name="ingresarContrasena_view_registrar">Ingresar Contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="yatehasregistrado">¿Ya te has registrado?</string>
    <string name="ingresar">Ingresar</string>
</resources>